--- a/style.css
+++ b/style.css
@@ -4,9 +4,19 @@
   box-sizing: border-box;
 }
 
+.hidden {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+  /* overflow: hidden; */
+
+  &:nth-of-type(2) {
+    color: rgb(11, 93, 100);
+  }
+}
+
 nav {
   position: fixed;
   transform-origin: top;
+  z-index: 2;
   font-size: 1.7vw;
   top: 0;
   height: 70px;
@@ -88,6 +98,10 @@ nav {
     &:nth-of-type(2) {
       color: rgb(2, 97, 103);
     }
+  }
+
+  .green {
+    color: rgb(2, 97, 103);
   }
 
   .image-wrapper {
